unpackaged/main/default/objects/Certification__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <label>Expires On</label>
    <summarizedField>Certification_Requirement__c.Expires_On__c</summarizedField>
    <summaryForeignKey>Certification_Requirement__c.Certification__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>