unpackaged/main/default/objects/Certification__c/fields/Notification_Days_before_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Days_before_Due_Date__c</fullName>
    <defaultValue>90</defaultValue>
    <label>Notification Days before Due Date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>