unpackaged/main/default/objects/Certification__c/fields/Number_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Number_Assigned__c</fullName>
    <label>Number Assigned</label>
    <summarizedField>Certification_Requirement__c.Number_Assigned__c</summarizedField>
    <summaryForeignKey>Certification_Requirement__c.Certification__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>