unpackaged/main/default/objects/Certification__c/fields/Number_Completed__c.field-meta.xml
<CustomField>
    <fullName>Number_Completed__c</fullName>
    <label>Number Completed</label>
    <summarizedField>Certification_Requirement__c.Number_Completed__c</summarizedField>
    <summaryForeignKey>Certification_Requirement__c.Certification__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>