unpackaged/main/default/objects/Certification__c/fields/Number_of_Certs_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Certs_Required__c</fullName>
    <label>Number of Certs Required</label>
    <summarizedField>Certification_Requirement__c.Number_Required__c</summarizedField>
    <summaryForeignKey>Certification_Requirement__c.Certification__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>