unpackaged/main/default/objects/Certification__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintain Current Tier</fullName>
            </value>
            <value>
                <fullName>Advance to Next Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>