unpackaged/main/default/objects/Certification__c/fields/Renewal_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Frequency__c</fullName>
    <label>Renewal Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>