unpackaged/main/default/objects/Certification__c/fields/Tier_Requirement_Level__c.field-meta.xml
<CustomField>
    <fullName>Tier_Requirement_Level__c</fullName>
    <label>Tier Requirement Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Authorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>