unpackaged/main/default/objects/Certification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Expires_On__c</columns>
    <columns>Status__c</columns>
    <columns>Notification_Days_before_Due_Date__c</columns>
    <columns>Renewal_Frequency__c</columns>
    <columns>Purpose__c</columns>
    <columns>Tier_Requirement_Level__c</columns>
    <columns>Number_of_Certs_Required__c</columns>
    <columns>Number_Assigned__c</columns>
    <columns>Number_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>